--- a/index.html
+++ b/index.html
@@ -14,131 +14,131 @@
 </head>
 
 <body>
-    <div class="game_area">
-        <div id="stol" style="margin-top: 30px;">
-            <div class="mast" style="clear: both;">
-                <div id="pik6" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px 0px;">
-                </div>
-                <div id="pik7" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px 0px;">
-                </div>
-                <div id="pik8" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px 0px;">
-                </div>
-                <div id="pik9" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px 0px;">
-                </div>
-                <div id="pik10" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px 0px;">
-                </div>
-                <div id="pik11" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px 0px;">
-                </div>
-                <div id="pik12" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px 0px;">
-                </div>
-                <div id="pik13" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px 0px;">
-                </div>
-                <div id="pik14" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px 0px;">
-                </div>
+    <div id="stol">
+        <div class="mast" style="clear: both;">
+            <div id="pik6" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px 0px;">
             </div>
-            <div class="mast" style="clear: both;">
-                <div id="che6" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -90px;">
-                </div>
-                <div id="che7" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -90px;">
-                </div>
-                <div id="che8" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -90px;">
-                </div>
-                <div id="che9" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -90px;">
-                </div>
-                <div id="che10" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -90px;">
-                </div>
-                <div id="che11" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -90px;">
-                </div>
-                <div id="che12" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -90px;">
-                </div>
-                <div id="che13" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -90px;">
-                </div>
-                <div id="che14" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -90px;">
-                </div>
+            <div id="pik7" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px 0px;">
             </div>
-            <div class="mast" style="clear: both;">
-                <div id="kre6" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -180px;">
-                </div>
-                <div id="kre7" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -180px;">
-                </div>
-                <div id="kre8" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -180px;">
-                </div>
-                <div id="kre9" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -180px;">
-                </div>
-                <div id="kre10" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -180px;">
-                </div>
-                <div id="kre11" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -180px;">
-                </div>
-                <div id="kre12" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -180px;">
-                </div>
-                <div id="kre13" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -180px;">
-                </div>
-                <div id="kre14" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -180px;">
-                </div>
+            <div id="pik8" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px 0px;">
             </div>
-            <div class="mast" style="clear: both;">
-                <div id="bub6" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -270px;">
-                </div>
-                <div id="bub7" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -270px;">
-                </div>
-                <div id="bub8" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -270px;">
-                </div>
-                <div id="bub9" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -270px;">
-                </div>
-                <div id="bub10" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -270px;">
-                </div>
-                <div id="bub11" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -270px;">
-                </div>
-                <div id="bub12" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -270px;">
-                </div>
-                <div id="bub13" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -270px;">
-                </div>
-                <div id="bub14" class="unknown"
-                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -270px;">
-                </div>
+            <div id="pik9" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px 0px;">
             </div>
-            <div id="sopernik" class="myButton" style="clear: both;"><span>Соперник</span></div>
-            <div id="moijarty" class="myButton" style="clear: both;"><span>Взял</span></div>
-            <div id="otboy" class="myButton"><span>Отбой</span></div>
-            <div id="newgame" class="myButton"><span>Новая игра</span></div>
+            <div id="pik10" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px 0px;">
+            </div>
+            <div id="pik11" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px 0px;">
+            </div>
+            <div id="pik12" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px 0px;">
+            </div>
+            <div id="pik13" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px 0px;">
+            </div>
+            <div id="pik14" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px 0px;">
+            </div>
         </div>
-
+        <div class="mast" style="clear: both;">
+            <div id="che6" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -90px;">
+            </div>
+            <div id="che7" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -90px;">
+            </div>
+            <div id="che8" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -90px;">
+            </div>
+            <div id="che9" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -90px;">
+            </div>
+            <div id="che10" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -90px;">
+            </div>
+            <div id="che11" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -90px;">
+            </div>
+            <div id="che12" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -90px;">
+            </div>
+            <div id="che13" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -90px;">
+            </div>
+            <div id="che14" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -90px;">
+            </div>
+        </div>
+        <div class="mast" style="clear: both;">
+            <div id="kre6" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -180px;">
+            </div>
+            <div id="kre7" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -180px;">
+            </div>
+            <div id="kre8" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -180px;">
+            </div>
+            <div id="kre9" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -180px;">
+            </div>
+            <div id="kre10" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -180px;">
+            </div>
+            <div id="kre11" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -180px;">
+            </div>
+            <div id="kre12" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -180px;">
+            </div>
+            <div id="kre13" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -180px;">
+            </div>
+            <div id="kre14" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -180px;">
+            </div>
+        </div>
+        <div class="mast" style="clear: both;">
+            <div id="bub6" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -270px;">
+            </div>
+            <div id="bub7" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -270px;">
+            </div>
+            <div id="bub8" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -270px;">
+            </div>
+            <div id="bub9" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -270px;">
+            </div>
+            <div id="bub10" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -270px;">
+            </div>
+            <div id="bub11" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -270px;">
+            </div>
+            <div id="bub12" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -270px;">
+            </div>
+            <div id="bub13" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -270px;">
+            </div>
+            <div id="bub14" class="unknown"
+                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -270px;">
+            </div>
+        </div>
     </div>
+    <div class="btnblock">
+        <span id="sopernik" class="myButton" style="clear: both;">СОПЕРНИК</span>
+        <span id="moijarty" class="myButton" style="clear: both;">ВЗЯЛ</span>
+        <span id="otboy" class="myButton">ОТБОЙ</span>
+        <span id="newgame" class="myButton">НОВАЯ ИГРА</span>
+    </div>
+
     <script src="./js/script.js"></script>
 </body>
 
