--- a/index24.html
+++ b/index24.html
@@ -14,18 +14,9 @@
 </head>
 
 <body>
-    <div><a href="/index24.html" id="cardsnumber" class="myButton">24 КАРТ</a></div>
+    <div><a href="/index.html" id="cardsnumber" class="myButton">36 КАРТ</a></div>
     <div id="stol">
         <div class="mast" style="clear: both;">
-            <div id="pik6" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px 0px;">
-            </div>
-            <div id="pik7" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px 0px;">
-            </div>
-            <div id="pik8" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px 0px;">
-            </div>
             <div id="pik9" class="unknown"
                 style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px 0px;">
             </div>
@@ -46,15 +37,6 @@
             </div>
         </div>
         <div class="mast" style="clear: both;">
-            <div id="che6" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -90px;">
-            </div>
-            <div id="che7" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -90px;">
-            </div>
-            <div id="che8" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -90px;">
-            </div>
             <div id="che9" class="unknown"
                 style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -90px;">
             </div>
@@ -75,15 +57,6 @@
             </div>
         </div>
         <div class="mast" style="clear: both;">
-            <div id="kre6" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -180px;">
-            </div>
-            <div id="kre7" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -180px;">
-            </div>
-            <div id="kre8" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -180px;">
-            </div>
             <div id="kre9" class="unknown"
                 style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -180px;">
             </div>
@@ -104,15 +77,6 @@
             </div>
         </div>
         <div class="mast" style="clear: both;">
-            <div id="bub6" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -300px -270px;">
-            </div>
-            <div id="bub7" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -360px -270px;">
-            </div>
-            <div id="bub8" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -420px -270px;">
-            </div>
             <div id="bub9" class="unknown"
                 style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -270px;">
             </div>
@@ -140,7 +104,7 @@
         <span id="newgame" class="myButton">НОВАЯ ИГРА</span>
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script24.js"></script>
 </body>
 
 </html>
