--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div><a href="/card24.html" id="cardsnumber" class="myButton">24 КАРТ</a></div>
+    <div><a href="card24.html" id="cardsnumber" class="myButton">24 КАРТ</a></div>
     <div id="stol">
         <div class="mast" style="clear: both;">
             <div id="pik6" class="unknown"
