--- a/card24.html
+++ b/card24.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div><a href="/index.html" id="cardsnumber" class="myButton">36 КАРТ</a></div>
+    <div><a href="index.html" id="cardsnumber" class="myButton">36 КАРТ</a></div>
     <div id="stol">
         <div class="mast" style="clear: both;">
             <div id="pik9" class="unknown"
