--- a/card24.html
+++ b/card24.html
@@ -14,93 +14,97 @@
 </head>
 
 <body>
-    <div><a href="index.html"  id="cardsnumber" class="myButton">36 КАРТ</a></div>
-    <div id="stol">
-        <div class="mast" style="clear: both;">
-            <div id="pik9" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px 0px;">
+    <div style="text-align: center;"><a href="index.html" id="cardsnumber" class="myButton">36 КАРТ</a></div>
+    <div style="display: flex;justify-content: center;">
+        <div id="stol" style="min-width: 420px;max-width: 400px;">
+            <div class="mast" style="clear: both;">
+                <div id="pik9" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px 0px;">
+                </div>
+                <div id="pik10" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px 0px;">
+                </div>
+                <div id="pik11" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px 0px;">
+                </div>
+                <div id="pik12" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px 0px;">
+                </div>
+                <div id="pik13" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px 0px;">
+                </div>
+                <div id="pik14" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px 0px;">
+                </div>
             </div>
-            <div id="pik10" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px 0px;">
+            <div class="mast" style="clear: both;">
+                <div id="che9" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -90px;">
+                </div>
+                <div id="che10" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -90px;">
+                </div>
+                <div id="che11" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -90px;">
+                </div>
+                <div id="che12" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -90px;">
+                </div>
+                <div id="che13" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -90px;">
+                </div>
+                <div id="che14" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -90px;">
+                </div>
             </div>
-            <div id="pik11" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px 0px;">
+            <div class="mast" style="clear: both;">
+                <div id="kre9" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -180px;">
+                </div>
+                <div id="kre10" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -180px;">
+                </div>
+                <div id="kre11" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -180px;">
+                </div>
+                <div id="kre12" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -180px;">
+                </div>
+                <div id="kre13" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -180px;">
+                </div>
+                <div id="kre14" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -180px;">
+                </div>
             </div>
-            <div id="pik12" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px 0px;">
-            </div>
-            <div id="pik13" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px 0px;">
-            </div>
-            <div id="pik14" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px 0px;">
-            </div>
-        </div>
-        <div class="mast" style="clear: both;">
-            <div id="che9" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -90px;">
-            </div>
-            <div id="che10" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -90px;">
-            </div>
-            <div id="che11" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -90px;">
-            </div>
-            <div id="che12" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -90px;">
-            </div>
-            <div id="che13" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -90px;">
-            </div>
-            <div id="che14" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -90px;">
-            </div>
-        </div>
-        <div class="mast" style="clear: both;">
-            <div id="kre9" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -180px;">
-            </div>
-            <div id="kre10" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -180px;">
-            </div>
-            <div id="kre11" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -180px;">
-            </div>
-            <div id="kre12" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -180px;">
-            </div>
-            <div id="kre13" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -180px;">
-            </div>
-            <div id="kre14" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -180px;">
-            </div>
-        </div>
-        <div class="mast" style="clear: both;">
-            <div id="bub9" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -270px;">
-            </div>
-            <div id="bub10" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -270px;">
-            </div>
-            <div id="bub11" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -270px;">
-            </div>
-            <div id="bub12" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -270px;">
-            </div>
-            <div id="bub13" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -270px;">
-            </div>
-            <div id="bub14" class="unknown"
-                style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -270px;">
+            <div class="mast" style="clear: both;">
+                <div id="bub9" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -480px -270px;">
+                </div>
+                <div id="bub10" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -540px -270px;">
+                </div>
+                <div id="bub11" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -600px -270px;">
+                </div>
+                <div id="bub12" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -660px -270px;">
+                </div>
+                <div id="bub13" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -720px -270px;">
+                </div>
+                <div id="bub14" class="unknown"
+                    style="width: 60px; height: 90px; margin: 3px; float: left; background-image: url(./img/karty-j2.jpg); background-position: -780px -270px;">
+                </div>
             </div>
         </div>
     </div>
-    <div class="btnblock">
+    <div class="btnblock" style="text-align: center;clear: both;min-width: 470px;">
         <span id="sopernik" class="myButton" style="clear: both;">СОПЕРНИК</span>
         <span id="moijarty" class="myButton" style="clear: both;">ВЗЯЛ</span>
         <span id="otboy" class="myButton">ОТБОЙ</span>
+    </div>
+    <div style="text-align: center;">
         <span id="newgame" class="myButton">НОВАЯ ИГРА</span>
     </div>
 
